--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
+    "clean": "rm -rf dist",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -15,7 +16,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.16.10",
+    "astro": "^4.16.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
