--- a/infrastructure/.gitignore
+++ b/infrastructure/.gitignore
@@ -36,3 +36,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+claude-3-haiku-connection-result.json
+titan-embed-connection-result.json
