--- a/.gitignore
+++ b/.gitignore
@@ -133,7 +133,6 @@ cython_debug/
 # PyCharm
 
 .idea/.gitignore
-.idea/dbx-genai-aws-demo.iml
 .idea/misc.xml
 .idea/modules.xml
 .idea/vcs.xml
@@ -142,3 +141,5 @@ cython_debug/
 .idea/
 
 builds/
+
+.env*
