--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "astro": "^4.16.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-use-websocket": "^4.10.1",
     "tailwindcss": "^3.4.13",
