--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "astro": "^4.16.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-use-websocket": "^4.10.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
