--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -53,6 +53,13 @@ blocks:
     task:
       prologue:
         commands:
+          # Install Terraform
+          - terraformVersion=1.21.0
+          - 'terraformUrl="https://releases.hashicorp.com/terraform/${terraformVersion}/terraform_${terraformVersion}_linux_amd64.zip"'
+          - 'curl -LO ${terraformUrl}'
+          - 'unzip terraform_${terraformVersion}_linux_amd64.zip'
+          - ROOT_DIR=`pwd`
+
           - checkout
           - cd infrastructure
       jobs:
