--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -66,7 +66,7 @@ blocks:
         - name: "Validate Terraform Configuration"
           commands:
             - echo "terraform is installed at ${ROOT_DIR}"
-            - ${ROOT_DIR}/terraform version"
+            - ${ROOT_DIR}/terraform version
             - ${ROOT_DIR}/terraform init -backend=false
             - echo "Validating Terraform configuration..."
             - ${ROOT_DIR}/terraform validate
