chore: Switch from nvm to sem-version for Node.js
Replace `nvm use $NODE_VERSION` with `sem-version node $NODE_VERSION` in
Semaphore pipeline. The sem-version tool is the standard way to manage
language versions on Semaphore agents and uses mise under the hood.

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,7 +19,7 @@ blocks:
       prologue:
         commands:
           - checkout
-          - nvm use $NODE_VERSION
+          - sem-version node $NODE_VERSION
           - cd frontend
       jobs:
         - name: "Build Frontend Application"
